Besig met save van bulk import. Issue HenryDeLange/WildLogWEI#32